[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "timecapsule-cli"
version = "1.0.0"
description = "Write letters to your future self. Cryptographically sealed."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["timecapsule", "encryption", "cli", "aes", "privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "cryptography>=42.0",
    "rfc3161ng>=1.1",
    "rich>=13.0",
    "gitpython>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
capsule = "cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/timecapsule-cli"
Repository = "https://github.com/yourusername/timecapsule-cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["capsule*"]
